# CVHumanImgKit

./: .gitmodules  MANIFEST.in  README.md  augment.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
converters/: convert_ncnn.md  convert_pfld.py
examples/: facelandmark_pipeline_demo.py  pfld_demo.py  pplitseg_demo.py  rtmface_demo.py  rtmpose_demo.py  scrfd_demo.py
faceimagekit/: __init__.py  face_detectors.py  face_landmarks.py  face_segmenters.py  pipelines.py  utils.py  version.py
faceimagekit/core/: __init__.py  exception.py  imports.py  registry.py
faceimagekit/detectors/: __init__.py  base.py  scrfd.py
faceimagekit/engine_backends/: __init__.py  mmdeploy_backend.py  ncnn_backend.py  onnx_backend.py  opencv_backend.py
faceimagekit/landmarks/: __init__.py  base.py  pfld.py  rtmface.py  rtmpose.py
faceimagekit/segments/: __init__.py  base.py  ppliteseg.py
weights/pfld/ncnn/: landmark_lapa_134-opt.param
weights/scrfd/ncnn/: scrfd_10g_bnkps_shape640x640-opt.param  scrfd_500m_bnkps_shape640x640-opt.param
